fixed portfolio title z-index

--- a/app/components/workComponent/workComponent.less
+++ b/app/components/workComponent/workComponent.less
@@ -48,6 +48,7 @@ work{
             bottom: 15px;
             left: 15px;
             right: 15px;
+            z-index: 2;
 
             .shadower{
                 position: absolute;
